samples/negative/girard-paradox.minitt
let error: Type = Type;

--
-- Created by intellij-minitt on 2019-03-16
-- girard-paradox
-- Author: ice1000
--

